feat: update Dockerfiles to use nodemon directly and install it globally
- Updated Dockerfiles for api-gateway, auth-service, geo-service, inventory-service, orders-service, and reports-service to install nodemon globally and use it directly in CMD.
- Added nodemon as a dependency in package.json and package-lock.json for api-gateway and auth-service.
- Updated docker-compose.yml to comment out unused services for clarity.

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -3,8 +3,12 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
+
+# Instala nodemon globalmente
+RUN npm install -g nodemon
+
 RUN npm install
 
 COPY . .
 
-CMD ["npx", "nodemon", "src/index.js"]
+CMD ["nodemon", "src/index.js"]
