--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -2,13 +2,21 @@ FROM node:18
 
 WORKDIR /app
 
+# Copia package.json e install
 COPY package*.json ./
 
-# Instala nodemon globalmente
+# Instala todas las dependencias (asegúrate que @prisma/client esté en "dependencies")
 RUN npm install -g nodemon
-
 RUN npm install
 
+# Copia el resto del código
 COPY . .
 
-CMD ["nodemon", "src/index.js"]
+# Genera el cliente Prisma (ya con todo el código y schema disponible)
+RUN npx prisma generate
+
+# Exposición del puerto (opcional)
+EXPOSE 4002
+
+# Comando de inicio
+CMD ["npx", "nodemon", "src/index.js"]
