fix: Correct DATABASE_URL to AUTH_URL in CI workflow for auth-service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Create .env file for auth-service
         run: |
-          echo "DATABASE_URL=${{ vars.AUTH_URL }}" > auth-service/.env
+          echo "AUTH_URL=${{ vars.AUTH_URL }}" > auth-service/.env
           echo "AUTH_PORT=4001" >> auth-service/.env
 
 
