--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -7,6 +7,7 @@ COPY package*.json ./
 
 # Instala todas las dependencias (asegúrate que @prisma/client esté en "dependencies")
 RUN npm install -g nodemon
+RUN npm install -g bcrypt
 RUN npm install
 
 # Copia el resto del código
@@ -14,6 +15,7 @@ COPY . .
 
 # Genera el cliente Prisma (ya con todo el código y schema disponible)
 RUN npx prisma generate
+
 
 # Comando de inicio
 CMD ["sh", "-c", "npx prisma db push && nodemon && npm start"]
