Uninstall of Nodemon

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -4,11 +4,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
-# Instala nodemon globalmente
-RUN npm install -g nodemon
-
 RUN npm install
 
 COPY . .
 
-CMD ["nodemon", "src/index.js"]
+CMD ["node", "src/index.js"]
