--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.5",
-    "nodemon": "^3.1.9"
+    "http-proxy-middleware": "^3.0.5"
   }
 }
