--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -5,9 +5,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.6.0"
   },
   "scripts": {
-  "start": "node src/index.js"
-}
+    "start": "node src/index.js"
+  }
 }
