Add Jest testing framework and initial tests for AuthController
- Updated package.json to include Jest, Supertest, and other devDependencies.
- Created AuthController.test.js with tests for the signUp function, including validation for required fields, email format, email uniqueness, and roleId validity.
- Mocked PrismaClient to simulate database interactions during tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,14 @@ services:
       timeout: 5s
       retries: 3
 
+  auth-tests:
+    build: ./auth-service
+    command: npm test
+    environment:
+      NODE_ENV: test
+    volumes:
+      - ./auth-service:/app
+
   # geo-service:
   #   build: ./geo-service
   #   ports:
