--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -6,9 +6,12 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.1",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest"
   }
 }
