--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
 
       - name: Run auth tests
         run: docker exec logistics-backend-auth-service-1 npm test || echo "No tests yet"
+        env:
+          JWT_SECRET: ${{ vars.JWT_SECRET }}
 
       - name: Deploy on Render
         if: github.ref == 'refs/heads/main'
