--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,6 @@ jobs:
         run: docker exec logistics-backend-auth-service-1 npm test
 
       - name: Deploy on Render
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/develop'
         run: |
           curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
