--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -4,11 +4,12 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "twilio": "^5.5.2"
   },
   "scripts": {
     "start": "node src/index.js",
