--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "twilio": "^5.5.2"
   },
   "scripts": {
     "test": "jest"
