--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -9,6 +9,8 @@
     "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
     "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.5.2"
   },
   "scripts": {
