feat: Consolidate environment variables management and update CI pipeline

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,40 @@
-API_HOST= ""
-NODE_ENV= ""
+# Base URL where the API runs in local environment
+API_HOST=""
+
+# Environment in which the application runs.
+NODE_ENV=""
+
+# Auth database URL ~ Supabase
+AUTH_DATABASE_URL=""
+DIRECT_URL=""
+
+# JWT secret key for signing tokens
+JWT_SECRET=""
+
+# Nodemailer configuration for sending emails
+EMAIL_USER=""
+EMAIL_PASSWORD=""
+
+# Auth service PORT
+AUTH_PORT=""
+
+# Twilio configuration for sending SMS
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_PHONE_NUMBER=""
+
+# Gateway URL
+GATEWAY_URL=""
+
+# Gateway PORT
+GATEWAY_PORT=""
+
+# Base URL for each service
+AUTH_URL=""
+GEO_URL=""
+INVENTORY_URL=""
+ORDERS_URL=""
+REPORTS_URL=""
+
+# Render Deploy Hook
+RENDER_DEPLOY_HOOK=""
