--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./api-gateway
     ports:
       - "3000:3000"
+    env_file:
+      - ./.env
     depends_on:
       - auth-service
       # - geo-service
@@ -15,7 +17,7 @@ services:
     ports:
       - "4001:4001"
     env_file:
-      - ./auth-service/.env
+      - ./.env
     volumes:
       - ./auth-service:/app
       - /app/node_modules
