--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "axios": "^1.9.0",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "prisma": "^6.7.0"
   }
 }
