--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.9.0",
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "p-limit": "^6.2.0"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
