--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ NODE_ENV=""
 AUTH_DATABASE_URL=""
 DIRECT_URL=""
 
+
 # JWT secret key for signing tokens
 JWT_SECRET=""
 
@@ -38,3 +39,7 @@ REPORTS_URL=""
 
 # Render Deploy Hook
 RENDER_DEPLOY_HOOK=""
+
+# Inventory database URL ~ Prisma
+INVENTORY_DATABASE_URL= ""
+INVENTORY_DIRECT_URL= ""
