--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -16,7 +16,8 @@
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
-    "p-limit": "^6.2.0"
+    "p-limit": "^6.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
