--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -14,8 +14,10 @@
     "@prisma/client": "^6.7.0",
     "axios": "^1.9.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "p-limit": "^6.2.0",
     "xlsx": "^0.18.5"
   },
