Implementation of the CsvProductController and CsvWarehouseController test

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,7 @@ REPORTS_URL=""
 
 # Render Deploy Hook
 RENDER_DEPLOY_HOOK=""
+
+ROL_GERENTE_ID=test-role-id
+CONTRASENA_GENERICA=Password123@
+AUTH_TOKEN=fake-token
