--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/index.js"
   },
   "keywords": [],
@@ -16,9 +16,11 @@
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
-    "p-limit": "^6.2.0"
+    "p-limit": "^6.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prisma": "^6.7.0"
   }
 }
