--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
     "start": "node src/index.js"
   },
   "keywords": [],
@@ -23,6 +23,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "prisma": "^6.8.2"
+    "jest": "^29.7.0",
+    "prisma": "^6.8.2",
+    "supertest": "^7.1.1"
   }
 }
