--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -13,7 +13,9 @@
     "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "prisma": "^6.8.2"
+    "prisma": "^6.8.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "description": ""
 }
