--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -20,6 +20,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "p-limit": "^6.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
