--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2"
   },
   "description": ""
