--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -15,12 +15,12 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.8.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "description": "",
   "devDependencies": {
-    "jiti": "^2.4.2"
+    "jiti": "^2.4.2",
+    "prisma": "^6.8.2"
   }
 }
