--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - "4001:4001"
     env_file:
       - ./.env
+    environment:
+      - NODE_ENV=test
     volumes:
       - ./auth-service:/app
     logging:
