--- a/geo-service/package.json
+++ b/geo-service/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
+    "p-limit": "^6.2.0",
     "socket.io": "^4.8.1"
   },
   "description": ""
