--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,20 @@ API_HOST=""
 # Environment in which the application runs.
 NODE_ENV=""
 
-# Auth database URL ~ Supabase
+# Database URL ~ Supabase
 AUTH_DATABASE_URL=""
-DIRECT_URL=""
+AUTH_DIRECT_URL=""
+INVENTORY_DATABASE_URL=""
+INVENTORY_DIRECT_URL=""
+ORDERS_DATABASE_URL=""
+ORDERS_DIRECT_URL=""
+GEO_DATABASE_URL=""
+REPORTS_DATABASE_URL=""
 
 # JWT secret key for signing tokens
 JWT_SECRET=""
+# JWT expiration time
+JWT_EXPIRATION_TIME=""
 
 # Nodemailer configuration for sending emails
 EMAIL_USER=""
@@ -17,9 +25,12 @@ EMAIL_PASSWORD=""
 
 # Auth service PORT
 AUTH_PORT=""
+AUTH_TOKEN=""
+ROL_GERENTE_ID=""
+CONTRASENA_GENERICA=""
 
 # Twilio configuration for sending SMS
-TWILIO_ACCOUNT_SID=""
+TWILIO_ACCOUNT_SID="" 
 TWILIO_AUTH_TOKEN=""
 TWILIO_PHONE_NUMBER=""
 
@@ -30,6 +41,7 @@ GATEWAY_URL=""
 GATEWAY_PORT=""
 
 # Base URL for each service
+GATEWAY_INTERNAL_URL=""
 AUTH_URL=""
 GEO_URL=""
 INVENTORY_URL=""
@@ -38,3 +50,5 @@ REPORTS_URL=""
 
 # Render Deploy Hook
 RENDER_DEPLOY_HOOK=""
+
+GOOGLE_MAPS_API_KEY=""
