chore: add comment for Google Maps API key in environment example

--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,5 @@ REPORTS_URL=""
 # Render Deploy Hook
 RENDER_DEPLOY_HOOK=""
 
+# Google Maps API key for map functionalities
 GOOGLE_MAPS_API_KEY=""
