--- a/geo-service/package.json
+++ b/geo-service/package.json
@@ -16,7 +16,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "p-limit": "^6.2.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "description": ""
 }
